--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.MySplashScreen" parent="Theme.SplashScreen">
-        <item name="android:windowSplashScreenBackground">@color/splash</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@drawable/splash</item>
+        <item name="windowSplashScreenBackground">@color/splash</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash</item>
         <item name="postSplashScreenTheme">@style/Theme.Qr</item>
     </style>
     <style name="Theme.Qr" parent="android:Theme.Material.Light.NoActionBar" />
